# server/src/portfolios/dto/create-portfolio.dto.ts
@@ -1,0 +1,7 @@
+import { PortfolioEntity } from '../entities/portfolio.entity'
+import { PickType } from '@nestjs/swagger'
+
+export class CreatePortfolioDto extends PickType(PortfolioEntity, [
+  'name',
+  'url',
+]) {}
