# server/swagger.json
@@ -217,6 +217,27 @@
           }
         }
       }
+    },
+    "/api/portfolios": {
+      "post": {
+        "operationId": "PortfoliosController_create",
+        "parameters": [],
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/CreatePortfolioDto"
+              }
+            }
+          }
+        },
+        "responses": {
+          "201": {
+            "description": ""
+          }
+        }
+      }
     }
   },
   "info": {
@@ -558,6 +579,19 @@
           "pgExpAmount",
           "itExpAmount"
         ]
+      },
+      "CreatePortfolioDto": {
+        "type": "object",
+        "properties": {
+          "name": {
+            "type": "string",
+            "nullable": true
+          },
+          "url": {
+            "type": "string",
+            "nullable": true
+          }
+        }
       }
     }
   }
